human_written_tests/WebAssembly/processed_control_flow_validation/test_if_93.wast
(assert_invalid
  (module
    (memory 0)
    (func $type-condition-empty-in-memory.grow
      (memory.grow (if(then))) (drop)
    )
  )
  "type mismatch"
)